// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly default unit is inches 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  class="ant-modal-close-x"
                >
                  <span
                    class="anticon close-icon"
                    role="img"
                  >
                    <svgr-url
                      aria-hidden="true"
                      classname=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    />
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
              >
                <div
                  class="title"
                >
                  Offset
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    Offset Direction
                  </span>
                  <div
                    class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-wrap"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="Outward"
                        >
                          Outward
                        </span>
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    Corner
                  </span>
                  <div
                    class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-wrap"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="Sharp"
                        >
                          Sharp
                        </span>
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    Offset Distance
                  </span>
                  <div
                    class="ant-input-number-affix-wrapper ant-input-number-affix-wrapper-without-controls css-dev-only-do-not-override-hash ant-input-number-outlined input with-unit"
                  >
                    <span
                      class="ant-input-number-prefix"
                    >
                      <span
                        class="unit"
                      >
                        inch
                      </span>
                    </span>
                    <div
                      class="ant-input-number css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-input-number-input-wrap"
                      >
                        <input
                          aria-valuemin="0"
                          aria-valuenow="0.2"
                          autocomplete="off"
                          class="ant-input-number-input"
                          role="spinbutton"
                          step="1"
                          type="number"
                          value="0.20"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-slider slider css-dev-only-do-not-override-hash ant-slider-horizontal"
                  >
                    <div
                      class="ant-slider-rail"
                    />
                    <div
                      class="ant-slider-track"
                      style="left: 0%; width: 20%;"
                    />
                    <div
                      class="ant-slider-step"
                    />
                    <div
                      aria-disabled="false"
                      aria-orientation="horizontal"
                      aria-valuemax="1"
                      aria-valuemin="0"
                      aria-valuenow="0.2"
                      class="ant-slider-handle"
                      role="slider"
                      style="left: 20%; transform: translateX(-50%);"
                      tabindex="0"
                    />
                  </div>
                </div>
              </div>
              <div
                class="ant-modal-footer"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                  type="button"
                >
                  <span>
                    Confirm
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should render correctly default unit is mm 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  class="ant-modal-close-x"
                >
                  <span
                    class="anticon close-icon"
                    role="img"
                  >
                    <svgr-url
                      aria-hidden="true"
                      classname=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      width="1em"
                    />
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
              >
                <div
                  class="title"
                >
                  Offset
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    Offset Direction
                  </span>
                  <div
                    class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-wrap"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="Outward"
                        >
                          Outward
                        </span>
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    Corner
                  </span>
                  <div
                    class="ant-select ant-select-outlined select css-dev-only-do-not-override-hash ant-select-single ant-select-show-arrow"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-wrap"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="rc_select_TEST_OR_SSR_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="rc_select_TEST_OR_SSR_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="rc_select_TEST_OR_SSR"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="Sharp"
                        >
                          Sharp
                        </span>
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
                <div
                  class="field"
                >
                  <span
                    class="label"
                  >
                    Offset Distance
                  </span>
                  <div
                    class="ant-input-number-affix-wrapper ant-input-number-affix-wrapper-without-controls css-dev-only-do-not-override-hash ant-input-number-outlined input with-unit"
                  >
                    <span
                      class="ant-input-number-prefix"
                    >
                      <span
                        class="unit"
                      >
                        mm
                      </span>
                    </span>
                    <div
                      class="ant-input-number css-dev-only-do-not-override-hash"
                    >
                      <div
                        class="ant-input-number-input-wrap"
                      >
                        <input
                          aria-valuemin="0"
                          aria-valuenow="5"
                          autocomplete="off"
                          class="ant-input-number-input"
                          role="spinbutton"
                          step="1"
                          type="number"
                          value="5.00"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-slider slider css-dev-only-do-not-override-hash ant-slider-horizontal"
                  >
                    <div
                      class="ant-slider-rail"
                    />
                    <div
                      class="ant-slider-track"
                      style="left: 0%; width: 21.052631578947366%;"
                    />
                    <div
                      class="ant-slider-step"
                    />
                    <div
                      aria-disabled="false"
                      aria-orientation="horizontal"
                      aria-valuemax="20"
                      aria-valuemin="1"
                      aria-valuenow="5"
                      class="ant-slider-handle"
                      role="slider"
                      style="left: 21.052631578947366%; transform: translateX(-50%);"
                      tabindex="0"
                    />
                  </div>
                </div>
              </div>
              <div
                class="ant-modal-footer"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
                <button
                  class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                  type="button"
                >
                  <span>
                    Confirm
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
